<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Main UI-->
    <string name="app_name">Team BlueRidge Paste</string>
    <string name="app_name_short">TBR Paste</string>
    <string name="paste_name">Paste Name:</string>
    <string name="paste_content">Paste Content:</string>
    <string name="paste_url_label">Paste URL:</string>
    <string name="paste_button">Paste!</string>
    <string name="paste_url"/>

    <!--Preferences-->
    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Your name to be shown on pastes</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>

</resources>